--- a/HurricaneCleaner.qmd
+++ b/HurricaneCleaner.qmd
@@ -52,7 +52,19 @@ check_all(df)
 
 ## Treat Missing Values
 ```{python}
-# TODO
+# Check for missing values
+print(df.isnull().sum())
+
+# Basin/Sub_basin are missing lots of values. Fill with "Unknown" instead of dropping rows?
+df['basin'] = df['basin'].fillna('Unknown')
+df['sub_basin'] = df['sub_basin'].fillna('Unknown')
+
+print(df.isnull().sum())
+```
+
+## Correct Time Data
+```{python}
+# 'date' is in UTC, but month/day are in local time. Fix?
 ```
 
 
